# AIVideoNote

./: .env.example  .gitignore  README.md  go.work
backend/: Makefile  README.md  config.yaml  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/database/: database.go
backend/internal/handler/: chat.go  cookie.go  export.go  group.go  provider.go  task.go  upload.go
backend/internal/middleware/: middleware.go
backend/internal/model/: cookie.go  group.go  note.go  provider.go  task.go
backend/internal/pkg/crypto/: aes.go
backend/internal/pkg/errcode/: errcode.go
backend/internal/repository/: cookie_repo.go  group_repo.go  note_repo.go  provider_repo.go  task_repo.go
backend/internal/router/: router.go
docs/: TODO.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: cookie.ts  group.ts  provider.ts  request.ts  task.ts  upload.ts
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
frontend/src/stores/: group.ts  provider.ts  task.ts
frontend/src/styles/: global.css  variables.css
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  NotFoundView.vue  SettingsView.vue
transfer/: .gitignore  README.md  main.py  pyproject.toml
transfer/app/: __init__.py  main.py
transfer/app/embedding/: router.py
transfer/app/transcriber/: base.py  groq.py  mlx_whisper.py  router.py  whisper.py
transfer/app/vision/: router.py
(+28 files in other folders)
