[project]
name = "aivideonote-transfer"
version = "0.1.0"
description = "AIVideoNote Python GPU 转录服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12>=12.9.2.10; sys_platform != 'darwin'",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]

[project.optional-dependencies]
groq = ["requests>=2.31.0"]
mlx = ["mlx-whisper>=0.3.0"]

[project.scripts]
serve = "main:main"

[dependency-groups]
dev = []

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
